[metadata]
name = sharedshell
version = 0.0.3
url = https://www.github.com/sersanchus/sharedshell
author = Sergio Sancho Chust
author_email = sersanchus@gmail.com
summary = This package adds the posibility of running commands in a shared shell
description_file = README.md
description_content_type = text/markdown